force-app/main/default/objects/Bundle_Feature__c/Bundle_Feature__c.object-meta.xml
<CustomObject>
    <description>Groups options of a bundle into logical sections</description>
    <label>Bundle Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>