force-app/main/default/objects/Bundle_Feature__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <inlineHelpText>Instructions or guidance for sales reps.</inlineHelpText>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>