force-app/main/default/objects/Bundle_Feature__c/fields/Max_Options__c.field-meta.xml
<CustomField>
    <fullName>Max_Options__c</fullName>
    <inlineHelpText>Maximum options allowed in this feature. Leave blank for unlimited.</inlineHelpText>
    <label>Max Options</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>