force-app/main/default/objects/Bundle_Feature__c/fields/Min_Options__c.field-meta.xml
<CustomField>
    <fullName>Min_Options__c</fullName>
    <inlineHelpText>Minimum options that must be selected within this feature. Leave blank or 0 for no requirement.</inlineHelpText>
    <label>Min Options</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>