force-app/main/default/objects/Bundle_Feature__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Order of display on configuration list. Use increments of 10 (10, 20, 30…).</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>